--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -16783,7 +16783,7 @@
 （廣州音）	傀	qui
 （台山音）	傀	phái
 （台山音）	傀	phói
-（欽州音）	傀	khuảy
+（欽州音）	傀	khủy
 （欽州音）	傀	qui
 （欽州音）	傀	quỷ
 （南寧音）	傀	quy
@@ -17251,7 +17251,7 @@
 （欽州音）	褘	phi
 （南寧音）	褘	(文)phay
 （南寧音）	褘	(白)uy
-（廣州音）	觿	khuày
+（廣州音）	觿	khùy
 （廣州音）	觿	phay
 （南寧音）	觿	khùy
 （廣州音）	輝	phay
@@ -19376,15 +19376,15 @@
 （廣州音）	咴	phui
 （台山音）	咴	phói
 （南寧音）	咴	phôi
-（廣州音）	喹	khuày
+（廣州音）	喹	khùy
 （廣州音）	喹	phui
 （台山音）	喹	phói
-（欽州音）	喹	khuày
+（欽州音）	喹	khùy
 （南寧音）	喹	khùy
-（廣州音）	奎	khuay
+（廣州音）	奎	khuy
 （廣州音）	奎	phui
 （台山音）	奎	phói
-（欽州音）	奎	khuày
+（欽州音）	奎	khùy
 （南寧音）	奎	khùy
 （廣州音）	恢	phui
 （台山音）	恢	phói
@@ -19397,7 +19397,7 @@
 （南寧音）	悝	phôi
 （南寧音）	悝	lĩ
 （廣州音）	拻	phui
-（廣州音）	楏	khuay
+（廣州音）	楏	khuy
 （廣州音）	楏	phui
 （廣州音）	櫆	phui
 （南寧音）	櫆	(又)khuy
@@ -19431,7 +19431,7 @@
 （南寧音）	顝	phôi
 （廣州音）	魁	phui
 （台山音）	魁	phói
-（欽州音）	魁	khuày
+（欽州音）	魁	khùy
 （南寧音）	魁	khùy
 （廣州音）	齀	ngật
 （廣州音）	齀	phui
@@ -26122,7 +26122,7 @@
 （廣州音）	䢜	qui
 （廣州音）	亀	qui
 （台山音）	亀	ký
-（廣州音）	刲	khuay
+（廣州音）	刲	khuy
 （廣州音）	刲	qui
 （台山音）	刲	ký
 （廣州音）	圭	qui
@@ -26144,7 +26144,7 @@
 （南寧音）	廆	quy
 （南寧音）	廆	ủy
 （廣州音）	櫷	qui
-（廣州音）	歸	khuáy
+（廣州音）	歸	khúy
 （廣州音）	歸	qui
 （廣州音）	歸	quỵ
 （台山音）	歸	ký
@@ -26190,9 +26190,9 @@
 （台山音）	胿	ký
 （台山音）	胿	kỵ
 （廣州音）	膭	qui
-（廣州音）	茥	khuay
+（廣州音）	茥	khuy
 （廣州音）	茥	qui
-（廣州音）	藈	khuay
+（廣州音）	藈	khuy
 （廣州音）	藈	qui
 （廣州音）	袿	qui
 （台山音）	袿	khá
@@ -26204,7 +26204,7 @@
 （台山音）	閨	ký
 （欽州音）	閨	qui
 （南寧音）	閨	quy
-（廣州音）	騩	khuáy
+（廣州音）	騩	khúy
 （廣州音）	騩	qui
 （廣州音）	騩	quý
 （廣州音）	鮭	qui
@@ -26234,7 +26234,7 @@
 （廣州音）	姽	ngãi
 （廣州音）	姽	quỷ
 （南寧音）	姽	quỷ
-（廣州音）	媿	khuáy
+（廣州音）	媿	khúy
 （廣州音）	媿	khuãi
 （廣州音）	媿	quỷ
 （台山音）	媿	khý
@@ -26256,7 +26256,7 @@
 （廣州音）	洈	quỷ
 （欽州音）	洈	ngày
 （南寧音）	洈	ngày
-（廣州音）	湀	khuay
+（廣州音）	湀	khuy
 （廣州音）	湀	khuãi
 （廣州音）	湀	quỷ
 （廣州音）	皀	quỷ
@@ -26361,7 +26361,7 @@
 （廣州音）	饋	quý
 （廣州音）	饋	quỵ
 （台山音）	饋	kỵ
-（欽州音）	饋	khuáy
+（欽州音）	饋	khúy
 （南寧音）	饋	quỵ
 （廣州音）	鯚	quý
 （廣州音）	鱖	khoát
@@ -26378,7 +26378,7 @@
 （南寧音）	䠩	quị
 （廣州音）	匱	quỵ
 （台山音）	匱	kỵ
-（欽州音）	匱	khuáy
+（欽州音）	匱	khúy
 （南寧音）	匱	quỵ
 （廣州音）	撌	quỵ
 （廣州音）	樻	quỵ
@@ -28377,7 +28377,7 @@
 （廣州音）	匸	hãi
 （台山音）	匸	hại
 （廣州音）	奊	hãi
-（廣州音）	奊	khuày
+（廣州音）	奊	khùy
 （廣州音）	謑	hãi
 （台山音）	謑	hỷ
 （廣州音）	𥉐	hãi
@@ -39849,7 +39849,7 @@
 （南寧音）	釚	khầu
 （廣州音）	銶	khầu
 （南寧音）	銶	khầu
-（廣州音）	頄	khuày
+（廣州音）	頄	khùy
 （廣州音）	頄	khầu
 （廣州音）	鯄	khầu
 （通用版）	鼽	khừu
@@ -40479,7 +40479,7 @@
 （欽州音）	瓊	khình
 （欽州音）	瓊	quằng
 （南寧音）	瓊	khình
-（廣州音）	瓗	khuày
+（廣州音）	瓗	khùy
 （廣州音）	瓗	khình
 （廣州音）	睘	khình
 （台山音）	睘	khình
@@ -40846,7 +40846,7 @@
 （廣州音）	劊	khúi
 （廣州音）	劊	khủi
 （台山音）	劊	khói
-（欽州音）	劊	khuáy
+（欽州音）	劊	khúy
 （欽州音）	劊	quý
 （南寧音）	劊	khúy
 （廣州音）	圚	khủi
@@ -40857,7 +40857,7 @@
 （廣州音）	憒	khúi
 （廣州音）	憒	khủi
 （台山音）	憒	kỵ
-（欽州音）	憒	khuáy
+（欽州音）	憒	khúy
 （南寧音）	憒	khúy
 （廣州音）	旝	khúi
 （廣州音）	旝	khủi
@@ -40885,7 +40885,7 @@
 （廣州音）	潰	khủi
 （台山音）	潰	khý
 （台山音）	潰	kỵ
-（欽州音）	潰	khuáy
+（欽州音）	潰	khúy
 （南寧音）	潰	khúy
 （廣州音）	澮	khúi
 （廣州音）	澮	khủi
@@ -40903,7 +40903,7 @@
 （廣州音）	絵	khủi
 （廣州音）	繢	khủi
 （台山音）	繢	khói
-（欽州音）	繢	khuáy
+（欽州音）	繢	khúy
 （南寧音）	繢	vội
 （廣州音）	繪	khúi
 （廣州音）	繪	khủi
@@ -40915,7 +40915,7 @@
 （廣州音）	聵	ngọi
 （廣州音）	聵	vụi
 （台山音）	聵	kỵ
-（欽州音）	聵	khuáy
+（欽州音）	聵	khúy
 （南寧音）	聵	khúy
 （廣州音）	膾	khúi
 （廣州音）	膾	khủi
@@ -41111,21 +41111,21 @@
 （廣州音）	𡃈	khuách
 （南寧音）	𡃈	khuách
 （廣州音）	䆲	khuanh
-（廣州音）	䂓	khuay
-（廣州音）	䖯	khuay
-（廣州音）	䯓	khuay
-（廣州音）	䲅	khuay
-（廣州音）	䶯	khuay
-（廣州音）	嫢	khuay
+（廣州音）	䂓	khuy
+（廣州音）	䖯	khuy
+（廣州音）	䯓	khuy
+（廣州音）	䲅	khuy
+（廣州音）	䶯	khuy
+（廣州音）	嫢	khuy
 （通用版）	嶲	slủi
-（廣州音）	嶲	khuay
+（廣州音）	嶲	khuy
 （廣州音）	嶲	sũi
 （廣州音）	嶲	sủi
 （台山音）	嶲	slái
 （南寧音）	嶲	khuy
 （南寧音）	嶲	sổi
 （通用版）	巂	slủi
-（廣州音）	巂	khuay
+（廣州音）	巂	khuy
 （廣州音）	巂	say
 （廣州音）	巂	sũi
 （廣州音）	巂	sủi
@@ -41133,159 +41133,159 @@
 （台山音）	巂	slái
 （南寧音）	巂	khuy
 （南寧音）	巂	sổi
-（廣州音）	巋	khuay
-（廣州音）	巋	khuảy
+（廣州音）	巋	khuy
+（廣州音）	巋	khủy
 （台山音）	巋	ký
-（欽州音）	巋	khuay
+（欽州音）	巋	khuy
 （南寧音）	巋	khuy
-（廣州音）	摫	khuay
-（廣州音）	晆	khuay
-（廣州音）	槻	khuay
-（廣州音）	槼	khuay
-（廣州音）	盔	khuay
+（廣州音）	摫	khuy
+（廣州音）	晆	khuy
+（廣州音）	槻	khuy
+（廣州音）	槼	khuy
+（廣州音）	盔	khuy
 （台山音）	盔	khý
 （台山音）	盔	phói
-（欽州音）	盔	khuay
+（欽州音）	盔	khuy
 （南寧音）	盔	(又)phôi
 （南寧音）	盔	khuy
-（廣州音）	睽	khuay
-（廣州音）	睽	khuày
+（廣州音）	睽	khuy
+（廣州音）	睽	khùy
 （台山音）	睽	khỳ
-（欽州音）	睽	khuày
+（欽州音）	睽	khùy
 （南寧音）	睽	khùy
-（廣州音）	瞡	khuay
-（廣州音）	窺	khuay
+（廣州音）	瞡	khuy
+（廣州音）	窺	khuy
 （台山音）	窺	khý
-（欽州音）	窺	khuay
+（欽州音）	窺	khuy
 （南寧音）	窺	khuy
-（廣州音）	聧	khuay
-（廣州音）	聧	khuày
-（廣州音）	蘬	khuay
-（廣州音）	蘬	khuảy
+（廣州音）	聧	khuy
+（廣州音）	聧	khùy
+（廣州音）	蘬	khuy
+（廣州音）	蘬	khủy
 （廣州音）	蘬	ủy
-（廣州音）	虧	khuay
+（廣州音）	虧	khuy
 （台山音）	虧	khý
-（欽州音）	虧	khuay
+（欽州音）	虧	khuy
 （南寧音）	虧	khuy
-（廣州音）	規	khuay
+（廣州音）	規	khuy
 （台山音）	規	khý
-（欽州音）	規	khuay
+（欽州音）	規	khuy
 （南寧音）	規	khuy
-（廣州音）	鍷	khuay
-（廣州音）	闚	khuay
+（廣州音）	鍷	khuy
+（廣州音）	闚	khuy
 （台山音）	闚	khý
 （南寧音）	闚	khuy
-（廣州音）	雟	khuay
+（廣州音）	雟	khuy
 （廣州音）	雟	say
 （廣州音）	雟	sũi
 （廣州音）	雟	sủi
-（廣州音）	鬹	khuay
+（廣州音）	鬹	khuy
 （南寧音）	鬹	khuy
-（廣州音）	䞨	khuảy
-（廣州音）	䠑	khuảy
+（廣州音）	䞨	khủy
+（廣州音）	䠑	khủy
 （台山音）	䠑	phói
-（廣州音）	煃	khuảy
+（廣州音）	煃	khủy
 （南寧音）	煃	khủy
-（廣州音）	跬	khuảy
+（廣州音）	跬	khủy
 （台山音）	跬	khý
 （台山音）	跬	slich
-（欽州音）	跬	khuảy
+（欽州音）	跬	khủy
 （南寧音）	跬	khủy
-（廣州音）	蹞	khuảy
+（廣州音）	蹞	khủy
 （台山音）	蹞	khý
-（廣州音）	頍	khuảy
+（廣州音）	頍	khủy
 （南寧音）	頍	khủy
-（廣州音）	䯣	khuáy
-（廣州音）	䰎	khuáy
-（廣州音）	尯	khuáy
-（廣州音）	愧	khuáy
+（廣州音）	䯣	khúy
+（廣州音）	䰎	khúy
+（廣州音）	尯	khúy
+（廣州音）	愧	khúy
 （廣州音）	愧	khuãi
 （台山音）	愧	khý
-（欽州音）	愧	khuáy
+（欽州音）	愧	khúy
 （南寧音）	愧	khúy
-（廣州音）	硊	khuáy
+（廣州音）	硊	khúy
 （廣州音）	硊	ngãi
 （南寧音）	硊	khúy
 （南寧音）	硊	ngãy
 （廣州音）	觖	khoát
-（廣州音）	觖	khuáy
+（廣州音）	觖	khúy
 （台山音）	觖	khut
 （南寧音）	觖	khoát
-（廣州音）	㔒	khuày
-（廣州音）	㙓	khuày
+（廣州音）	㔒	khùy
+（廣州音）	㙓	khùy
 （南寧音）	㙓	khùy
-（廣州音）	㙺	khuày
-（廣州音）	㩗	khuày
-（廣州音）	㩦	khuày
-（廣州音）	㽯	khuày
-（廣州音）	䀘	khuày
-（廣州音）	䕫	khuày
-（廣州音）	䙵	khuày
-（廣州音）	䟸	khuày
-（廣州音）	䤆	khuày
-（廣州音）	䥴	khuày
-（廣州音）	䧶	khuày
-（廣州音）	䳫	khuày
-（廣州音）	夔	khuày
+（廣州音）	㙺	khùy
+（廣州音）	㩗	khùy
+（廣州音）	㩦	khùy
+（廣州音）	㽯	khùy
+（廣州音）	䀘	khùy
+（廣州音）	䕫	khùy
+（廣州音）	䙵	khùy
+（廣州音）	䟸	khùy
+（廣州音）	䤆	khùy
+（廣州音）	䥴	khùy
+（廣州音）	䧶	khùy
+（廣州音）	䳫	khùy
+（廣州音）	夔	khùy
 （台山音）	夔	khỳ
-（欽州音）	夔	khuày
+（欽州音）	夔	khùy
 （南寧音）	夔	khùy
-（廣州音）	戣	khuày
+（廣州音）	戣	khùy
 （南寧音）	戣	khùy
-（廣州音）	揆	khuày
+（廣州音）	揆	khùy
 （廣州音）	揆	khuãi
 （台山音）	揆	khỳ
-（欽州音）	揆	khuày
+（欽州音）	揆	khùy
 （南寧音）	揆	khùy
 （南寧音）	揆	(又)khũy
-（廣州音）	携	khuày
-（廣州音）	擕	khuày
-（廣州音）	攜	khuày
+（廣州音）	携	khùy
+（廣州音）	擕	khùy
+（廣州音）	攜	khùy
 （台山音）	攜	khỳ
-（欽州音）	攜	khuày
+（欽州音）	攜	khùy
 （南寧音）	攜	khùy
-（廣州音）	暌	khuày
+（廣州音）	暌	khùy
 （台山音）	暌	khỳ
-（欽州音）	暌	khuày
+（欽州音）	暌	khùy
 （南寧音）	暌	khùy
-（廣州音）	楑	khuày
+（廣州音）	楑	khùy
 （廣州音）	楑	khuãi
 （通用版）	檇	túi
 （廣州音）	檇	chúi
-（廣州音）	檇	khuày
+（廣州音）	檇	khùy
 （台山音）	檇	túi
 （南寧音）	檇	chối
-（廣州音）	犪	khuày
-（廣州音）	畦	khuày
+（廣州音）	犪	khùy
+（廣州音）	畦	khùy
 （台山音）	畦	khỳ
-（欽州音）	畦	khuày
+（欽州音）	畦	khùy
 （南寧音）	畦	khùy
-（廣州音）	纗	khuày
+（廣州音）	纗	khùy
 （廣州音）	纗	vạ
-（廣州音）	葵	khuày
+（廣州音）	葵	khùy
 （台山音）	葵	khỳ
 （台山音）	葵	khỹ
-（欽州音）	葵	khuày
+（欽州音）	葵	khùy
 （南寧音）	葵	khùy
-（廣州音）	蘷	khuày
-（廣州音）	虁	khuày
-（廣州音）	蠵	khuày
+（廣州音）	蘷	khùy
+（廣州音）	虁	khùy
+（廣州音）	蠵	khùy
 （南寧音）	蠵	khùy
-（廣州音）	觹	khuày
-（廣州音）	觽	khuày
-（廣州音）	讗	khuày
-（廣州音）	躨	khuày
-（廣州音）	逵	khuày
+（廣州音）	觹	khùy
+（廣州音）	觽	khùy
+（廣州音）	讗	khùy
+（廣州音）	躨	khùy
+（廣州音）	逵	khùy
 （台山音）	逵	khý
 （台山音）	逵	kỹ
-（欽州音）	逵	khuày
+（欽州音）	逵	khùy
 （南寧音）	逵	khùy
-（廣州音）	鄈	khuày
-（廣州音）	酅	khuày
+（廣州音）	鄈	khùy
+（廣州音）	酅	khùy
 （南寧音）	酅	khùy
-（廣州音）	鍨	khuày
-（廣州音）	鑴	khuày
-（廣州音）	隗	khuày
+（廣州音）	鍨	khùy
+（廣州音）	鑴	khùy
+（廣州音）	隗	khùy
 （廣州音）	隗	ngày
 （廣州音）	隗	ngãi
 （廣州音）	隗	vãi
@@ -41294,25 +41294,25 @@
 （欽州音）	隗	ngảy
 （南寧音）	隗	khùy
 （南寧音）	隗	ngãy
-（廣州音）	頯	khuày
-（廣州音）	馗	khuày
+（廣州音）	頯	khùy
+（廣州音）	馗	khùy
 （台山音）	馗	khỳ
-（欽州音）	馗	khuày
+（欽州音）	馗	khùy
 （南寧音）	馗	khùy
-（廣州音）	騤	khuày
+（廣州音）	騤	khùy
 （南寧音）	騤	khùy
-（廣州音）	驨	khuày
-（廣州音）	𡋣	khuày
-（廣州音）	𡖂	khuày
-（廣州音）	𢹂	khuày
-（廣州音）	𣋒	khuày
-（廣州音）	𣿮	khuày
-（廣州音）	𤩸	khuày
-（廣州音）	𧃍	khuày
-（廣州音）	𧤤	khuày
-（廣州音）	𩓚	khuày
-（廣州音）	𪆴	khuày
-（廣州音）	䕫	khuày
+（廣州音）	驨	khùy
+（廣州音）	𡋣	khùy
+（廣州音）	𡖂	khùy
+（廣州音）	𢹂	khùy
+（廣州音）	𣋒	khùy
+（廣州音）	𣿮	khùy
+（廣州音）	𤩸	khùy
+（廣州音）	𧃍	khùy
+（廣州音）	𧤤	khùy
+（廣州音）	𩓚	khùy
+（廣州音）	𪆴	khùy
+（廣州音）	䕫	khùy
 （廣州音）	㟡	khuãi
 （廣州音）	謉	khuãi
 （廣州音）	㒭	khuân
