--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -10457,7 +10457,7 @@
 𥇣	quật	
 𠺌	qoa	
 珪	qoai	
-𪚩	qôi	
+𪚩	qui	
 㶁	quich
 㷦	quich
 䂆	quich
@@ -22662,28 +22662,28 @@
 鈮	nỵ	
 餌	nỵ	
 𠽒	nểnh	
-囡	nôi	
-女	nổi	
-䋈	nồi	
-蒘	nồi	
-㼏	nỗi	
-䲎	nỗi	
-女	nỗi	
-娞	nỗi	
-浽	nỗi	
-籹	nỗi	
-脮	nỗi	
-腇	nỗi	
-釹	nỗi	
-餒	nỗi	
-餧	nỗi	
-鮾	nỗi	
-鯘	nỗi	
-㨅	nội	
-㵖	nội	
-呐	nội	
-女	nội	
-錗	nội	
+囡	nui	
+女	nũi	
+䋈	nùi	
+蒘	nùi	
+㼏	nũi	
+䲎	nũi	
+女	nũi	
+娞	nũi	
+浽	nũi	
+籹	nũi	
+脮	nũi	
+腇	nũi	
+釹	nũi	
+餒	nũi	
+餧	nũi	
+鮾	nũi	
+鯘	nũi	
+㨅	nũi	
+㵖	nũi	
+呐	nũi	
+女	nũi	
+錗	nũi	
 㕯	nụt	
 䖓	nụt	
 䟜	nụt	
