--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -670,7 +670,7 @@
 （南寧音）	詏	(白)éo
 （廣州音）	靿	áo
 （廣州音）	靿	ảo
-（台山音）	靿	yiếu
+（台山音）	靿	yếu
 （南寧音）	靿	áo
 （廣州音）	鴢	yểu
 （廣州音）	鴢	ảo
@@ -13873,7 +13873,7 @@
 （南寧音）	丼	(文)chỉnh
 （廣州音）	抌	chẩm
 （廣州音）	抌	đẩm
-（台山音）	抌	yiểu
+（台山音）	抌	yểu
 （欽州音）	抌	đẩm
 （南寧音）	抌	đẩm
 （廣州音）	沊	đẩm
@@ -15573,10 +15573,10 @@
 （廣州音）	銚	yều
 （廣州音）	銚	điệu
 （台山音）	銚	hiếu
-（台山音）	銚	yiều
+（台山音）	銚	yều
 （欽州音）	銚	thiều
 （欽州音）	銚	xiêu
-（欽州音）	銚	yiều
+（欽州音）	銚	yều
 （欽州音）	銚	điều
 （南寧音）	銚	điệu
 （南寧音）	銚	yều
@@ -23908,7 +23908,7 @@
 （廣州音）	徼	yêu
 （台山音）	徼	hiểu
 （台山音）	徼	kiếu
-（台山音）	徼	yiếu
+（台山音）	徼	yếu
 （欽州音）	徼	kiểu
 （南寧音）	徼	kiếu
 （南寧音）	徼	hiêu
@@ -30347,7 +30347,7 @@
 （廣州音）	曉	hiểu
 （台山音）	曉	hiểu
 （欽州音）	曉	hiểu
-（欽州音）	曉	yiểu
+（欽州音）	曉	yểu
 （南寧音）	曉	hiểu
 （廣州音）	皢	hiểu
 （廣州音）	𣇈	hiểu
@@ -33116,7 +33116,7 @@
 （南寧音）	鈾	yầu
 （通用版）	黝	yửu
 （廣州音）	黝	yẩu
-（台山音）	黝	yiểu
+（台山音）	黝	yểu
 （台山音）	黝	yửu
 （欽州音）	黝	yầu
 （南寧音）	黝	yẩu
@@ -33274,10 +33274,10 @@
 （廣州音）	繇	yầu
 （廣州音）	繇	yều
 （台山音）	繇	chạo
-（台山音）	繇	yiều
+（台山音）	繇	yều
 （台山音）	繇	yừu
 （欽州音）	繇	chầu
-（欽州音）	繇	yiều
+（欽州音）	繇	yều
 （欽州音）	繇	yầu
 （南寧音）	繇	yầu
 （南寧音）	繇	yều
@@ -36307,13 +36307,13 @@
 （廣州音）	么	ma
 （廣州音）	么	mo
 （廣州音）	么	yêu
-（台山音）	么	yiếu
+（台山音）	么	yếu
 （南寧音）	么	yêu
 （南寧音）	么	ma
 （南寧音）	么	mo
 （廣州音）	吆	yêu
-（台山音）	吆	yiếu
-（欽州音）	吆	yiêu
+（台山音）	吆	yếu
+（欽州音）	吆	yêu
 （南寧音）	吆	(白)eo
 （南寧音）	吆	yêu
 （廣州音）	喓	yêu
@@ -36322,40 +36322,40 @@
 （廣州音）	夭	yêu
 （廣州音）	夭	yểu
 （廣州音）	夭	ổ
-（台山音）	夭	yiểu
-（欽州音）	夭	yiêu
-（欽州音）	夭	yiểu
+（台山音）	夭	yểu
+（欽州音）	夭	yêu
+（欽州音）	夭	yểu
 （南寧音）	夭	yêu
 （廣州音）	妖	yêu
 （廣州音）	妖	yểu
-（台山音）	妖	yiểu
-（欽州音）	妖	yiêu
+（台山音）	妖	yểu
+（欽州音）	妖	yêu
 （南寧音）	妖	yêu
 （廣州音）	幺	yêu
-（台山音）	幺	yiếu
-（欽州音）	幺	yiêu
+（台山音）	幺	yếu
+（欽州音）	幺	yêu
 （南寧音）	幺	yêu
 （廣州音）	枖	yêu
 （廣州音）	楆	yêu
 （廣州音）	祅	yêu
 （廣州音）	祅	yểu
 （廣州音）	腰	yêu
-（台山音）	腰	yiếu
-（欽州音）	腰	yiêu
+（台山音）	腰	yếu
+（欽州音）	腰	yêu
 （南寧音）	腰	yêu
 （廣州音）	葽	yêu
 （廣州音）	要	yêu
 （廣州音）	要	yếu
 （廣州音）	要	yểu
-（台山音）	要	yiếu
-（欽州音）	要	yiêu
-（欽州音）	要	yiếu
+（台山音）	要	yếu
+（欽州音）	要	yêu
+（欽州音）	要	yếu
 （南寧音）	要	yêu
 （南寧音）	要	yếu
 （廣州音）	訞	yêu
 （廣州音）	邀	yêu
-（台山音）	邀	yiếu
-（欽州音）	邀	yiêu
+（台山音）	邀	yếu
+（欽州音）	邀	yêu
 （南寧音）	邀	yêu
 （廣州音）	鴁	yêu
 （廣州音）	𨘋	yêu
@@ -36383,27 +36383,27 @@
 （廣州音）	擾	yểu
 （廣州音）	擾	yễu
 （台山音）	擾	ngiễu
-（欽州音）	擾	yiểu
+（欽州音）	擾	yểu
 （南寧音）	擾	yểu
 （廣州音）	杳	miễu
 （廣州音）	杳	yểu
 （台山音）	杳	miễu
-（欽州音）	杳	yiểu
+（欽州音）	杳	yểu
 （南寧音）	杳	(又)yểu
 （南寧音）	杳	miễu
 （廣州音）	柼	yểu
 （廣州音）	殀	yểu
 （廣州音）	眑	yểu
-（欽州音）	眑	yiểu
+（欽州音）	眑	yểu
 （廣州音）	窅	yểu
 （台山音）	窅	iễu
-（台山音）	窅	yiểu
-（欽州音）	窅	yiểu
+（台山音）	窅	yểu
+（欽州音）	窅	yểu
 （南寧音）	窅	yểu
 （廣州音）	窈	miễu
 （廣州音）	窈	yểu
-（台山音）	窈	yiểu
-（欽州音）	窈	yiểu
+（台山音）	窈	yểu
+（欽州音）	窈	yểu
 （南寧音）	窈	(又)yểu
 （南寧音）	窈	miễu
 （廣州音）	窔	ngẫu
@@ -36414,25 +36414,25 @@
 （廣州音）	繞	yểu
 （廣州音）	繞	yễu
 （台山音）	繞	ngiễu
-（欽州音）	繞	yiểu
+（欽州音）	繞	yểu
 （南寧音）	繞	yểu
 （廣州音）	苭	yểu
 （廣州音）	闄	yểu
 （廣州音）	騕	yểu
 （廣州音）	騕	yễu
-（欽州音）	騕	yiểu
+（欽州音）	騕	yểu
 （廣州音）	鷂	yều
 （廣州音）	鷂	yểu
 （廣州音）	鷂	yệu
-（台山音）	鷂	yiễu
-（欽州音）	鷂	yiều
+（台山音）	鷂	yễu
+（欽州音）	鷂	yều
 （南寧音）	鷂	(又)yào
 （南寧音）	鷂	yệu
 （廣州音）	㛉	yếu
 （廣州音）	熎	yếu
 （廣州音）	穾	ngão
 （廣州音）	穾	yếu
-（台山音）	穾	yiếu
+（台山音）	穾	yếu
 （廣州音）	𨪁	yếu
 （廣州音）	㑸	yều
 （廣州音）	㑾	yều
@@ -36447,20 +36447,20 @@
 （廣州音）	䢣	yều
 （廣州音）	䬙	yều
 （廣州音）	傜	yều
-（台山音）	傜	yiều
+（台山音）	傜	yều
 （廣州音）	嗂	yều
 （通用版）	垚	nhiều
 （廣州音）	垚	yều
 （台山音）	垚	ngiều
-（台山音）	垚	yiều
-（欽州音）	垚	yiều
+（台山音）	垚	yều
+（欽州音）	垚	yều
 （南寧音）	垚	yều
 （廣州音）	堯	yều
-（欽州音）	堯	yiều
+（欽州音）	堯	yều
 （南寧音）	堯	yều
 （廣州音）	姚	yều
-（台山音）	姚	yiều
-（欽州音）	姚	yiều
+（台山音）	姚	yều
+（欽州音）	姚	yều
 （南寧音）	姚	yều
 （廣州音）	媱	yều
 （南寧音）	媱	yều
@@ -36470,24 +36470,24 @@
 （廣州音）	嬈	yễu
 （台山音）	嬈	ngiều
 （台山音）	嬈	ngiễu
-（欽州音）	嬈	yiều
+（欽州音）	嬈	yều
 （南寧音）	嬈	yều
 （廣州音）	尭	yều
 （通用版）	嶢	nhiều
 （廣州音）	嶢	yều
 （台山音）	嶢	ngiều
-（欽州音）	嶢	yiều
+（欽州音）	嶢	yều
 （南寧音）	嶢	yều
 （廣州音）	嶤	yều
 （廣州音）	徭	yều
-（台山音）	徭	yiều
-（欽州音）	徭	yiều
+（台山音）	徭	yều
+（欽州音）	徭	yều
 （南寧音）	徭	yều
 （廣州音）	愮	yều
 （廣州音）	揺	yều
 （廣州音）	搖	yều
-（台山音）	搖	yiều
-（欽州音）	搖	yiều
+（台山音）	搖	yều
+（欽州音）	搖	yều
 （南寧音）	搖	yều
 （廣州音）	摿	yều
 （廣州音）	暚	yều
@@ -36501,7 +36501,7 @@
 （台山音）	橈	nạo
 （欽州音）	橈	nào
 （欽州音）	橈	nảo
-（欽州音）	橈	yiều
+（欽州音）	橈	yều
 （南寧音）	橈	yều
 （南寧音）	橈	nào
 （通用版）	洮	thau
@@ -36510,63 +36510,63 @@
 （廣州音）	洮	yều
 （台山音）	洮	hào
 （欽州音）	洮	thầu
-（欽州音）	洮	yiều
+（欽州音）	洮	yều
 （南寧音）	洮	yều
 （南寧音）	洮	thồ
 （廣州音）	烑	yều
 （廣州音）	猺	yều
-（欽州音）	猺	yiều
+（欽州音）	猺	yều
 （南寧音）	猺	yều
 （廣州音）	珧	yều
-（台山音）	珧	yiều
+（台山音）	珧	yều
 （台山音）	珧	yừu
-（欽州音）	珧	yiều
+（欽州音）	珧	yều
 （南寧音）	珧	yều
 （廣州音）	瑤	yều
-（台山音）	瑤	yiều
-（欽州音）	瑤	yiều
+（台山音）	瑤	yều
+（欽州音）	瑤	yều
 （南寧音）	瑤	yều
 （廣州音）	磘	yều
 （廣州音）	窯	yều
-（台山音）	窯	yiều
-（欽州音）	窯	yiều
+（台山音）	窯	yều
+（欽州音）	窯	yều
 （南寧音）	窯	yều
 （廣州音）	窰	yều
-（台山音）	窰	yiều
+（台山音）	窰	yều
 （廣州音）	脁	thiếu
 （廣州音）	脁	thiểu
 （廣州音）	脁	yều
 （台山音）	脁	hiếu
-（台山音）	脁	yiều
+（台山音）	脁	yều
 （通用版）	蕘	nhiều
 （廣州音）	蕘	yều
 （台山音）	蕘	ngiều
 （欽州音）	蕘	nhào
-（欽州音）	蕘	yiều
+（欽州音）	蕘	yều
 （南寧音）	蕘	yều
 （廣州音）	蘨	yều
 （欽州音）	蘨	yao
-（欽州音）	蘨	yiều
+（欽州音）	蘨	yều
 （通用版）	蟯	nhiều
 （廣州音）	蟯	nào
 （廣州音）	蟯	yều
 （台山音）	蟯	ngiều
-（欽州音）	蟯	yiều
+（欽州音）	蟯	yều
 （南寧音）	蟯	yều
 （南寧音）	蟯	(又)nào
 （廣州音）	襓	yều
 （廣州音）	謠	yều
-（台山音）	謠	yiều
-（欽州音）	謠	yiều
+（台山音）	謠	yều
+（欽州音）	謠	yều
 （南寧音）	謠	yều
 （廣州音）	謡	yều
 （廣州音）	軺	yều
-（台山音）	軺	yiều
-（欽州音）	軺	yiều
+（台山音）	軺	yều
+（欽州音）	軺	yều
 （南寧音）	軺	yều
 （廣州音）	遙	yều
-（台山音）	遙	yiều
-（欽州音）	遙	yiều
+（台山音）	遙	yều
+（欽州音）	遙	yều
 （南寧音）	遙	yều
 （廣州音）	鎐	yều
 （通用版）	陶	thàu
@@ -36574,25 +36574,25 @@
 （廣州音）	陶	yều
 （台山音）	陶	hào
 （台山音）	陶	hò
-（台山音）	陶	yiều
+（台山音）	陶	yều
 （欽州音）	陶	thầu
 （南寧音）	陶	yều
 （南寧音）	陶	thồ
 （廣州音）	顤	khiều
 （廣州音）	顤	yều
 （廣州音）	颻	yều
-（台山音）	颻	yiều
-（欽州音）	颻	yiều
+（台山音）	颻	yều
+（欽州音）	颻	yều
 （南寧音）	颻	yều
 （廣州音）	餆	yều
 （通用版）	饒	nhiều
 （廣州音）	饒	yều
 （台山音）	饒	ngiều
-（欽州音）	饒	yiều
+（欽州音）	饒	yều
 （南寧音）	饒	yều
 （廣州音）	鰩	yều
-（台山音）	鰩	yiều
-（欽州音）	鰩	yiều
+（台山音）	鰩	yều
+（欽州音）	鰩	yều
 （南寧音）	鰩	yều
 （廣州音）	鱙	miều
 （廣州音）	鱙	yều
@@ -36608,7 +36608,7 @@
 （廣州音）	䁘	yễu
 （廣州音）	䯚	yễu
 （廣州音）	崾	yễu
-（台山音）	崾	yiếu
+（台山音）	崾	yếu
 （南寧音）	崾	yễu
 （廣州音）	扰	yễu
 （南寧音）	扰	yểu
@@ -36621,27 +36621,27 @@
 （台山音）	皛	sliểu
 （南寧音）	皛	khiễu
 （廣州音）	舀	yễu
-（台山音）	舀	yiểu
-（欽州音）	舀	yiểu
+（台山音）	舀	yểu
+（欽州音）	舀	yểu
 （南寧音）	舀	yễu
 （廣州音）	遶	yễu
 （廣州音）	隢	yễu
 （廣州音）	㞁	yệu
 （廣州音）	㿢	yệu
-（台山音）	㿢	yiệu
+（台山音）	㿢	yệu
 （廣州音）	曜	yệu
-（台山音）	曜	yiệu
-（欽州音）	曜	yiều
+（台山音）	曜	yệu
+（欽州音）	曜	yều
 （南寧音）	曜	yệu
 （廣州音）	燿	sước
 （廣州音）	燿	yệu
-（欽州音）	燿	yiều
+（欽州音）	燿	yều
 （南寧音）	燿	yệu
 （廣州音）	矅	yệu
 （廣州音）	筄	yệu
 （廣州音）	耀	yệu
-（台山音）	耀	yiệu
-（欽州音）	耀	yiều
+（台山音）	耀	yệu
+（欽州音）	耀	yều
 （南寧音）	耀	yệu
 （廣州音）	艞	thiếu
 （廣州音）	艞	yệu
@@ -36674,7 +36674,7 @@
 （南寧音）	瀹	yược
 （廣州音）	約	vọc
 （廣州音）	約	yước
-（台山音）	約	yiếu
+（台山音）	約	yếu
 （台山音）	約	yêc
 （台山音）	約	yếc
 （欽州音）	約	yước
