--- a/quocngutihamchauva.yaml
+++ b/quocngutihamchauva.yaml
@@ -3966,52 +3966,52 @@
 粵	yiệt	
 樾	yiệt	
 曰	yiệt	
-幺	yiêu	
-夭	yiêu	
-吆	yiêu	
-妖	yiêu	
-腰	yiêu	
-邀	yiêu	
-要	yiêu	
-擾	yiểu	
-繞	yiểu	
-曉	yiểu	
-夭	yiểu	
-舀	yiểu	
-杳	yiểu	
-騕	yiểu	
-窈	yiểu	
-眑	yiểu	
-窅	yiểu	
-要	yiếu	
-蟯	yiều	
-饒	yiều	
-嬈	yiều	
-橈	yiều	
-蕘	yiều	
-堯	yiều	
-垚	yiều	
-嶢	yiều	
-姚	yiều	
-珧	yiều	
-銚	yiều	
-洮	yiều	
-窯	yiều	
-謠	yiều	
-搖	yiều	
-徭	yiều	
-繇	yiều	
-蘨	yiều	
-遙	yiều	
-猺	yiều	
-瑤	yiều	
-颻	yiều	
-鰩	yiều	
-鷂	yiều	
-軺	yiều	
-曜	yiều	
-燿	yiều	
-耀	yiều	
+幺	yêu	
+夭	yêu	
+吆	yêu	
+妖	yêu	
+腰	yêu	
+邀	yêu	
+要	yêu	
+擾	yểu	
+繞	yểu	
+曉	yểu	
+夭	yểu	
+舀	yểu	
+杳	yểu	
+騕	yểu	
+窈	yểu	
+眑	yểu	
+窅	yểu	
+要	yếu	
+蟯	yều	
+饒	yều	
+嬈	yều	
+橈	yều	
+蕘	yều	
+堯	yều	
+垚	yều	
+嶢	yều	
+姚	yều	
+珧	yều	
+銚	yều	
+洮	yều	
+窯	yều	
+謠	yều	
+搖	yều	
+徭	yều	
+繇	yều	
+蘨	yều	
+遙	yều	
+猺	yều	
+瑤	yều	
+颻	yều	
+鰩	yều	
+鷂	yều	
+軺	yều	
+曜	yều	
+燿	yều	
+耀	yều	
 喲	yo	
 㦛	yò	
 𡁎	yoẻ	
