--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -2278,10 +2278,10 @@
 齊	xày
 𣋠	xày
 𪗆	xày
-璾	xãi	
-萕	xãi	
-薺	xãi	
-鱭	xãi	
+璾	xãy	
+萕	xãy	
+薺	xãy	
+鱭	xãy	
 䔴	xăc	
 墄	xăc	
 廁	xăc	
@@ -11222,11 +11222,11 @@
 郋	hày
 騱	hày
 鼷	hày
-匸	hãi	
-奊	hãi	
-徯	hãi	
-謑	hãi	
-𥉐	hãi	
+匸	hãy	
+奊	hãy	
+徯	hãy	
+謑	hãy	
+𥉐	hãy	
 䐼	hạy
 䜁	hạy
 係	hạy
@@ -13134,9 +13134,9 @@
 呦	yao	
 撓	yao	
 𠰋	yao	
-孬	yãi	
-曳	yãi	
-𠯋	yãi	
+孬	yãy	
+曳	yãy	
+𠯋	yãy	
 㑜	yạy
 㖂	yạy
 㛳	yạy
@@ -17914,14 +17914,14 @@
 𩓚	khùy
 𪆴	khùy
 䕫	khùy
-㟡	khuãi	
-媿	khuãi	
-愧	khuãi	
-揆	khuãi	
-楑	khuãi	
-湀	khuãi	
-謉	khuãi	
-饋	khuãi	
+㟡	khũy	
+媿	khũy	
+愧	khũy	
+揆	khũy	
+楑	khũy	
+湀	khũy	
+謉	khũy	
+饋	khũy	
 㒭	khuân	
 㟒	khuân	
 䖵	khuân	
@@ -18472,22 +18472,22 @@
 黎	lày
 黧	lày
 𦺙	lày
-䗍	lãi	
-䦵	lãi	
-剺	lãi	
-劙	lãi	
-攭	lãi	
-檷	lãi	
-欚	lãi	
-澧	lãi	
-禮	lãi	
-蟸	lãi	
-蠡	lãi	
-豊	lãi	
-邐	lãi	
-醴	lãi	
-鱧	lãi	
-𧬹	lãi	
+䗍	lãy	
+䦵	lãy	
+剺	lãy	
+劙	lãy	
+攭	lãy	
+檷	lãy	
+欚	lãy	
+澧	lãy	
+禮	lãy	
+蟸	lãy	
+蠡	lãy	
+豊	lãy	
+邐	lãy	
+醴	lãy	
+鱧	lãy	
+𧬹	lãy	
 㑦	lạy
 㒧	lạy
 㘑	lạy
@@ -20972,25 +20972,25 @@
 麋	mày
 麛	mày
 𣉢	mày
-㐘	mãi	
-䋛	mãi	
-䱊	mãi	
-咪	mãi	
-弭	mãi	
-敉	mãi	
-洣	mãi	
-渳	mãi	
-眫	mãi	
-眯	mãi	
-瞇	mãi	
-米	mãi	
-粎	mãi	
-脒	mãi	
-蔝	mãi	
-蛘	mãi	
-蝆	mãi	
-辟	mãi	
-銤	mãi	
+㐘	mãy	
+䋛	mãy	
+䱊	mãy	
+咪	mãy	
+弭	mãy	
+敉	mãy	
+洣	mãy	
+渳	mãy	
+眫	mãy	
+眯	mãy	
+瞇	mãy	
+米	mãy	
+粎	mãy	
+脒	mãy	
+蔝	mãy	
+蛘	mãy	
+蝆	mãy	
+辟	mãy	
+銤	mãy	
 㜆	mạy
 咪	mạy
 袂	mạy
@@ -22488,13 +22488,13 @@
 屔	này
 泥	này
 臡	này
-䦵	nãi	
-檷	nãi	
-泥	nãi	
-禰	nãi	
-苨	nãi	
-鉨	nãi	
-鑈	nãi	
+䦵	nãy	
+檷	nãy	
+泥	nãy	
+禰	nãy	
+苨	nãy	
+鉨	nãy	
+鑈	nãy	
 泥	nạy
 迡	nạy
 𪙛	năc	
@@ -22991,31 +22991,31 @@
 麛	ngày
 齯	ngày
 𤊓	ngày
-㠖	ngãi	
-䃬	ngãi	
-䉝	ngãi	
-䧧	ngãi	
-䰙	ngãi	
-厃	ngãi	
-姽	ngãi	
-峗	ngãi	
-峞	ngãi	
-嶬	ngãi	
-掜	ngãi	
-檥	ngãi	
-硊	ngãi	
-礒	ngãi	
-艤	ngãi	
-蛾	ngãi	
-螘	ngãi	
-蟻	ngãi	
-轙	ngãi	
-鈘	ngãi	
-钀	ngãi	
-隗	ngãi	
-頠	ngãi	
-顗	ngãi	
-齮	ngãi	
+㠖	ngãy	
+䃬	ngãy	
+䉝	ngãy	
+䧧	ngãy	
+䰙	ngãy	
+厃	ngãy	
+姽	ngãy	
+峗	ngãy	
+峞	ngãy	
+嶬	ngãy	
+掜	ngãy	
+檥	ngãy	
+硊	ngãy	
+礒	ngãy	
+艤	ngãy	
+蛾	ngãy	
+螘	ngãy	
+蟻	ngãy	
+轙	ngãy	
+鈘	ngãy	
+钀	ngãy	
+隗	ngãy	
+頠	ngãy	
+顗	ngãy	
+齮	ngãy	
 㙯	ngạy
 㜒	ngạy
 䆿	ngạy
@@ -24195,9 +24195,9 @@
 俾	páy
 埤	páy
 睥	páy
-䁹	pãi	
-睤	pãi	
-睥	pãi	
+䁹	pãy	
+睤	pãy	
+睥	pãy	
 㡦	pân	
 䎙	pân	
 噴	pân	
@@ -28285,12 +28285,12 @@
 鼶	thày
 𧡰	thày
 𪂿	thày
-㼵	thãi	
-䑯	thãi	
-娣	thãi	
-弟	thãi	
-悌	thãi	
-𡠨	thãi	
+㼵	thãy	
+䑯	thãy	
+娣	thãy	
+弟	thãy	
+悌	thãy	
+𡠨	thãy	
 娣	thạy
 弟	thạy
 悌	thạy
