--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -2975,7 +2975,7 @@
 （南寧音）	贔	bị
 （廣州音）	辟	bich
 （廣州音）	辟	bỵ
-（廣州音）	辟	mãi
+（廣州音）	辟	mãy
 （廣州音）	辟	pich
 （台山音）	辟	bich
 （台山音）	辟	pich
@@ -4215,7 +4215,7 @@
 （廣州音）	孬	bổ
 （廣州音）	孬	nao
 （廣州音）	孬	nạo
-（廣州音）	孬	yãi
+（廣州音）	孬	yãy
 （台山音）	孬	yài
 （欽州音）	孬	nao
 （南寧音）	孬	(又)bổ
@@ -6315,7 +6315,7 @@
 （廣州音）	艩	xày
 （廣州音）	薺	cháy
 （廣州音）	薺	xày
-（廣州音）	薺	xãi
+（廣州音）	薺	xãy
 （廣州音）	薺	xì
 （台山音）	薺	xài
 （台山音）	薺	xĩ
@@ -6333,7 +6333,7 @@
 （欽州音）	霽	cháy
 （南寧音）	霽	cháy
 （廣州音）	鱭	xày
-（廣州音）	鱭	xãi
+（廣州音）	鱭	xãy
 （台山音）	鱭	tái
 （欽州音）	鱭	xảy
 （南寧音）	鱭	xày
@@ -6354,8 +6354,8 @@
 （廣州音）	𣋠	xày
 （廣州音）	𪗆	xày
 （廣州音）	璾	chi
-（廣州音）	璾	xãi
-（廣州音）	萕	xãi
+（廣州音）	璾	xãy
+（廣州音）	萕	xãy
 （廣州音）	䔴	xăc
 （廣州音）	墄	xăc
 （廣州音）	廁	chăc
@@ -11708,7 +11708,7 @@
 （台山音）	豖	truc
 （廣州音）	趗	xuc
 （廣州音）	踀	xuc
-（廣州音）	踓	vãi
+（廣州音）	踓	ũy/vỹ
 （廣州音）	踓	xuc
 （廣州音）	踧	chuc
 （廣州音）	踧	xuc
@@ -13706,7 +13706,7 @@
 （欽州音）	埭	đòi
 （南寧音）	埭	đạy
 （南寧音）	埭	(又)đọi
-（廣州音）	娣	thãi
+（廣州音）	娣	thãy
 （廣州音）	娣	thạy
 （廣州音）	娣	đạy
 （台山音）	娣	hãi
@@ -13716,7 +13716,7 @@
 （南寧音）	娣	thãy
 （廣州音）	弚	thùi
 （廣州音）	弚	đạy
-（廣州音）	弟	thãi
+（廣州音）	弟	thãy
 （廣州音）	弟	thùi
 （廣州音）	弟	thạy
 （廣州音）	弟	đạy
@@ -13726,7 +13726,7 @@
 （欽州音）	弟	đày
 （南寧音）	弟	đạy
 （南寧音）	弟	(語)đỉ
-（廣州音）	悌	thãi
+（廣州音）	悌	thãy
 （廣州音）	悌	thạy
 （廣州音）	悌	đạy
 （台山音）	悌	ại
@@ -16755,7 +16755,7 @@
 （南寧音）	華	vạ
 （廣州音）	蒊	pha
 （廣州音）	蘤	pha
-（廣州音）	蘤	vãi
+（廣州音）	蘤	ũy/vỹ
 （廣州音）	錵	pha
 （廣州音）	𤾸	pha
 （廣州音）	划	phá
@@ -17210,7 +17210,7 @@
 （南寧音）	暉	(文)phay
 （南寧音）	暉	(白)uy
 （廣州音）	椲	phay
-（廣州音）	椲	vãi
+（廣州音）	椲	ũy/vỹ
 （廣州音）	楎	phay
 （廣州音）	楎	vần
 （廣州音）	瀈	phay
@@ -19442,13 +19442,13 @@
 （廣州音）	䏨	phủi
 （廣州音）	䫥	phủi
 （廣州音）	洧	phủi
-（廣州音）	洧	vãi
+（廣州音）	洧	ũy/vỹ
 （台山音）	洧	vỷ
 （南寧音）	洧	phổi
 （廣州音）	燘	mũi
 （廣州音）	燘	phủi
 （廣州音）	痏	phủi
-（廣州音）	痏	vãi
+（廣州音）	痏	ũy/vỹ
 （台山音）	痏	vỷ
 （南寧音）	痏	phổi
 （廣州音）	賄	khủi
@@ -19457,7 +19457,7 @@
 （欽州音）	賄	phủi
 （南寧音）	賄	phổi
 （廣州音）	鮪	phủi
-（廣州音）	鮪	vãi
+（廣州音）	鮪	ũy/vỹ
 （台山音）	鮪	vỷ
 （欽州音）	鮪	ủy
 （南寧音）	鮪	phổi
@@ -26231,11 +26231,11 @@
 （廣州音）	厬	quỷ
 （廣州音）	垝	quỷ
 （欽州音）	垝	quỷ
-（廣州音）	姽	ngãi
+（廣州音）	姽	ngãy
 （廣州音）	姽	quỷ
 （南寧音）	姽	quỷ
 （廣州音）	媿	khúy
-（廣州音）	媿	khuãi
+（廣州音）	媿	khuãy
 （廣州音）	媿	quỷ
 （台山音）	媿	khý
 （南寧音）	媿	khúy
@@ -26257,7 +26257,7 @@
 （欽州音）	洈	ngày
 （南寧音）	洈	ngày
 （廣州音）	湀	khuy
-（廣州音）	湀	khuãi
+（廣州音）	湀	khuãy
 （廣州音）	湀	quỷ
 （廣州音）	皀	quỷ
 （廣州音）	祪	quỷ
@@ -26357,7 +26357,7 @@
 （欽州音）	蹶	khiết
 （南寧音）	蹶	quý
 （南寧音）	蹶	khoát
-（廣州音）	饋	khuãi
+（廣州音）	饋	khuãy
 （廣州音）	饋	quý
 （廣州音）	饋	quỵ
 （台山音）	饋	kỵ
@@ -28340,7 +28340,7 @@
 （南寧音）	嵇	(文)hày
 （南寧音）	嵇	(白)khay
 （廣州音）	徯	hày
-（廣州音）	徯	hãi
+（廣州音）	徯	hãy
 （台山音）	徯	khái
 （欽州音）	徯	hày
 （南寧音）	徯	(文)hày
@@ -28374,13 +28374,13 @@
 （欽州音）	鼷	hày
 （南寧音）	鼷	(文)hày
 （南寧音）	鼷	(白)khay
-（廣州音）	匸	hãi
+（廣州音）	匸	hãy
 （台山音）	匸	hại
-（廣州音）	奊	hãi
+（廣州音）	奊	hãy
 （廣州音）	奊	khùy
-（廣州音）	謑	hãi
+（廣州音）	謑	hãy
 （台山音）	謑	hỷ
-（廣州音）	𥉐	hãi
+（廣州音）	𥉐	hãy
 （廣州音）	䐼	hạy
 （廣州音）	䜁	hạy
 （廣州音）	係	hạy
@@ -31952,12 +31952,12 @@
 （南寧音）	撓	(文)ngao
 （南寧音）	撓	(白)ngeo
 （廣州音）	𠰋	yao
-（廣州音）	曳	yãi
+（廣州音）	曳	yãy
 （廣州音）	曳	yạy
 （台山音）	曳	yại
 （欽州音）	曳	yày
 （南寧音）	曳	yạy
-（廣州音）	𠯋	yãi
+（廣州音）	𠯋	yãy
 （欽州音）	𠯋	hẻ
 （欽州音）	𠯋	yày
 （南寧音）	𠯋	yày
@@ -33958,7 +33958,7 @@
 （廣州音）	輢	ỷ
 （廣州音）	陭	khy
 （廣州音）	陭	ỷ
-（廣州音）	齮	ngãi
+（廣州音）	齮	ngãy
 （廣州音）	齮	ỷ
 （欽州音）	齮	ngì
 （南寧音）	齮	ỷ
@@ -34111,7 +34111,7 @@
 （廣州音）	崺	yì
 （廣州音）	崺	yĩ
 （廣州音）	嶬	ngày
-（廣州音）	嶬	ngãi
+（廣州音）	嶬	ngãy
 （廣州音）	嶬	yì
 （通用版）	嶷	ngì
 （通用版）	嶷	ngịch
@@ -36285,7 +36285,7 @@
 （廣州音）	蛪	yiệt
 （廣州音）	蠮	yiệt
 （南寧音）	蠮	yiết
-（廣州音）	钀	ngãi
+（廣州音）	钀	ngãy
 （廣州音）	钀	yiệt
 （廣州音）	闑	yiệt
 （南寧音）	闑	niệp
@@ -37022,14 +37022,14 @@
 （台山音）	蘘	ngềnh
 （欽州音）	蘘	nhường
 （南寧音）	蘘	yường
-（廣州音）	蛘	mãi
+（廣州音）	蛘	mãy
 （廣州音）	蛘	yường
 （廣州音）	蛘	yưỡng
 （台山音）	蛘	yềnh
 （南寧音）	蛘	yường
 （南寧音）	蛘	yưỡng
 （廣州音）	蝆	me
-（廣州音）	蝆	mãi
+（廣州音）	蝆	mãy
 （廣州音）	蝆	yường
 （台山音）	蝆	yềnh
 （廣州音）	諹	yường
@@ -39114,7 +39114,7 @@
 （廣州音）	耎	oãn
 （台山音）	耎	ngún
 （廣州音）	薳	oãn
-（廣州音）	薳	vãi
+（廣州音）	薳	ũy/vỹ
 （廣州音）	薳	ủy
 （南寧音）	薳	yoãn
 （南寧音）	薳	ủy
@@ -41199,12 +41199,12 @@
 （廣州音）	䰎	khúy
 （廣州音）	尯	khúy
 （廣州音）	愧	khúy
-（廣州音）	愧	khuãi
+（廣州音）	愧	khuãy
 （台山音）	愧	khý
 （欽州音）	愧	khúy
 （南寧音）	愧	khúy
 （廣州音）	硊	khúy
-（廣州音）	硊	ngãi
+（廣州音）	硊	ngãy
 （南寧音）	硊	khúy
 （南寧音）	硊	ngãy
 （廣州音）	觖	khoát
@@ -41233,7 +41233,7 @@
 （廣州音）	戣	khùy
 （南寧音）	戣	khùy
 （廣州音）	揆	khùy
-（廣州音）	揆	khuãi
+（廣州音）	揆	khuãy
 （台山音）	揆	khỳ
 （欽州音）	揆	khùy
 （南寧音）	揆	khùy
@@ -41249,7 +41249,7 @@
 （欽州音）	暌	khùy
 （南寧音）	暌	khùy
 （廣州音）	楑	khùy
-（廣州音）	楑	khuãi
+（廣州音）	楑	khuãy
 （通用版）	檇	túi
 （廣州音）	檇	chúi
 （廣州音）	檇	khùy
@@ -41287,8 +41287,8 @@
 （廣州音）	鑴	khùy
 （廣州音）	隗	khùy
 （廣州音）	隗	ngày
-（廣州音）	隗	ngãi
-（廣州音）	隗	vãi
+（廣州音）	隗	ngãy
+（廣州音）	隗	ũy/vỹ
 （台山音）	隗	khỳ
 （台山音）	隗	vỷ
 （欽州音）	隗	ngảy
@@ -41313,8 +41313,8 @@
 （廣州音）	𩓚	khùy
 （廣州音）	𪆴	khùy
 （廣州音）	䕫	khùy
-（廣州音）	㟡	khuãi
-（廣州音）	謉	khuãi
+（廣州音）	㟡	khuãy
+（廣州音）	謉	khuãy
 （廣州音）	㒭	khuân
 （廣州音）	㟒	khuân
 （廣州音）	䖵	khuân
@@ -42280,7 +42280,7 @@
 （欽州音）	藜	lày
 （南寧音）	藜	lày
 （廣州音）	蠡	lày
-（廣州音）	蠡	lãi
+（廣州音）	蠡	lãy
 （廣州音）	蠡	lò
 （台山音）	蠡	lài
 （台山音）	蠡	lãi
@@ -42303,16 +42303,16 @@
 （欽州音）	黧	lày
 （南寧音）	黧	lày
 （廣州音）	𦺙	lày
-（廣州音）	䗍	lãi
+（廣州音）	䗍	lãy
 （台山音）	䗍	lãi
-（廣州音）	䦵	lãi
-（廣州音）	䦵	nãi
-（廣州音）	剺	lãi
+（廣州音）	䦵	lãy
+（廣州音）	䦵	nãy
+（廣州音）	剺	lãy
 （廣州音）	剺	lỳ
 （欽州音）	剺	li
 （南寧音）	剺	(語)li
 （南寧音）	剺	lì
-（廣州音）	劙	lãi
+（廣州音）	劙	lãy
 （廣州音）	劙	lạy
 （廣州音）	劙	lỳ
 （台山音）	劙	lãi
@@ -42320,38 +42320,38 @@
 （欽州音）	劙	li
 （南寧音）	劙	lãy
 （南寧音）	劙	(又)lì
-（廣州音）	攭	lãi
-（廣州音）	檷	lãi
-（廣州音）	檷	nãi
+（廣州音）	攭	lãy
+（廣州音）	檷	lãy
+（廣州音）	檷	nãy
 （廣州音）	檷	nỹ
-（廣州音）	欚	lãi
-（廣州音）	澧	lãi
+（廣州音）	欚	lãy
+（廣州音）	澧	lãy
 （台山音）	澧	lãi
 （欽州音）	澧	lảy
 （南寧音）	澧	lãy
-（廣州音）	禮	lãi
+（廣州音）	禮	lãy
 （台山音）	禮	lãi
 （欽州音）	禮	lảy
 （南寧音）	禮	lãy
-（廣州音）	蟸	lãi
-（廣州音）	豊	lãi
+（廣州音）	蟸	lãy
+（廣州音）	豊	lãy
 （台山音）	豊	lãi
 （台山音）	豊	phúng
 （南寧音）	豊	lãy
-（廣州音）	邐	lãi
+（廣州音）	邐	lãy
 （廣州音）	邐	lỹ
 （台山音）	邐	lỳ
 （欽州音）	邐	lảy
 （南寧音）	邐	lĩ
-（廣州音）	醴	lãi
+（廣州音）	醴	lãy
 （台山音）	醴	lãi
 （欽州音）	醴	lảy
 （南寧音）	醴	lãy
-（廣州音）	鱧	lãi
+（廣州音）	鱧	lãy
 （台山音）	鱧	lãi
 （欽州音）	鱧	lảy
 （南寧音）	鱧	lãy
-（廣州音）	𧬹	lãi
+（廣州音）	𧬹	lãy
 （廣州音）	㑦	lạy
 （廣州音）	㒧	lạy
 （廣州音）	㘑	lạy
@@ -47467,7 +47467,7 @@
 （廣州音）	咪	may
 （廣州音）	咪	mi
 （廣州音）	咪	my
-（廣州音）	咪	mãi
+（廣州音）	咪	mãy
 （廣州音）	咪	mạy
 （台山音）	咪	mải
 （欽州音）	咪	may
@@ -47476,7 +47476,7 @@
 （南寧音）	咪	(語)mạy
 （南寧音）	咪	mi
 （廣州音）	米	may
-（廣州音）	米	mãi
+（廣州音）	米	mãy
 （台山音）	米	mải
 （欽州音）	米	may
 （欽州音）	米	mảy
@@ -47498,7 +47498,7 @@
 （廣州音）	眯	mi
 （廣州音）	眯	my
 （廣州音）	眯	mày
-（廣州音）	眯	mãi
+（廣州音）	眯	mãy
 （台山音）	眯	mài
 （台山音）	眯	mý
 （欽州音）	眯	mảy
@@ -47507,7 +47507,7 @@
 （廣州音）	瞇	mi
 （廣州音）	瞇	my
 （廣州音）	瞇	mày
-（廣州音）	瞇	mãi
+（廣州音）	瞇	mãy
 （台山音）	瞇	mài
 （台山音）	瞇	mý
 （欽州音）	瞇	mi
@@ -47544,35 +47544,35 @@
 （廣州音）	麛	mày
 （廣州音）	麛	ngày
 （廣州音）	𣉢	mày
-（廣州音）	㐘	mãi
-（廣州音）	䋛	mãi
-（廣州音）	䱊	mãi
-（廣州音）	弭	mãi
+（廣州音）	㐘	mãy
+（廣州音）	䋛	mãy
+（廣州音）	䱊	mãy
+（廣州音）	弭	mãy
 （廣州音）	弭	mỹ
 （台山音）	弭	mỹ
 （台山音）	弭	nỵ
 （欽州音）	弭	mỉ
 （南寧音）	弭	mĩ
-（廣州音）	敉	mãi
+（廣州音）	敉	mãy
 （廣州音）	敉	mỹ
 （台山音）	敉	mại
 （台山音）	敉	mỵ
 （台山音）	敉	nỵ
 （南寧音）	敉	mĩ
-（廣州音）	洣	mãi
+（廣州音）	洣	mãy
 （欽州音）	洣	mảy
 （南寧音）	洣	mãy
-（廣州音）	渳	mãi
+（廣州音）	渳	mãy
 （欽州音）	渳	mí
 （南寧音）	渳	mĩ
-（廣州音）	眫	mãi
-（廣州音）	粎	mãi
-（廣州音）	脒	mãi
+（廣州音）	眫	mãy
+（廣州音）	粎	mãy
+（廣州音）	脒	mãy
 （台山音）	脒	mải
 （欽州音）	脒	mảy
 （南寧音）	脒	mãy
-（廣州音）	蔝	mãi
-（廣州音）	銤	mãi
+（廣州音）	蔝	mãy
+（廣州音）	銤	mãy
 （廣州音）	㜆	mạy
 （廣州音）	袂	mạy
 （台山音）	袂	mại
@@ -50377,7 +50377,7 @@
 （廣州音）	屔	này
 （廣州音）	屔	nỳ
 （廣州音）	泥	này
-（廣州音）	泥	nãi
+（廣州音）	泥	nãy
 （廣州音）	泥	nạy
 （廣州音）	泥	nỵ
 （台山音）	泥	nài
@@ -50387,7 +50387,7 @@
 （南寧音）	泥	nị
 （廣州音）	臡	này
 （南寧音）	臡	này
-（廣州音）	禰	nãi
+（廣州音）	禰	nãy
 （廣州音）	禰	nỳ
 （廣州音）	禰	nỹ
 （台山音）	禰	nãi
@@ -50396,13 +50396,13 @@
 （欽州音）	禰	nảy
 （南寧音）	禰	nì
 （南寧音）	禰	nĩ
-（廣州音）	苨	nãi
+（廣州音）	苨	nãy
 （廣州音）	苨	nỹ
 （台山音）	苨	nài
-（廣州音）	鉨	nãi
+（廣州音）	鉨	nãy
 （南寧音）	鉨	nĩ
 （廣州音）	鑈	niệp
-（廣州音）	鑈	nãi
+（廣州音）	鑈	nãy
 （廣州音）	𪙛	năc
 （台山音）	𪙛	nac
 （南寧音）	𪙛	(白)năc
@@ -51154,11 +51154,11 @@
 （欽州音）	婗	ngay
 （欽州音）	婗	ngày
 （廣州音）	峗	ngày
-（廣州音）	峗	ngãi
+（廣州音）	峗	ngãy
 （南寧音）	峗	ngày
 （南寧音）	峗	ngãy
 （廣州音）	峞	ngày
-（廣州音）	峞	ngãi
+（廣州音）	峞	ngãy
 （通用版）	嵬	ngùi
 （廣州音）	嵬	ngày
 （台山音）	嵬	ngài
@@ -51212,40 +51212,40 @@
 （廣州音）	齯	ngày
 （南寧音）	齯	ngày
 （廣州音）	𤊓	ngày
-（廣州音）	㠖	ngãi
-（廣州音）	䃬	ngãi
-（廣州音）	䉝	ngãi
-（廣州音）	䧧	ngãi
-（廣州音）	䰙	ngãi
-（廣州音）	厃	ngãi
-（廣州音）	掜	ngãi
+（廣州音）	㠖	ngãy
+（廣州音）	䃬	ngãy
+（廣州音）	䉝	ngãy
+（廣州音）	䧧	ngãy
+（廣州音）	䰙	ngãy
+（廣州音）	厃	ngãy
+（廣州音）	掜	ngãy
 （廣州音）	掜	niệp
-（廣州音）	檥	ngãi
+（廣州音）	檥	ngãy
 （台山音）	檥	ngải
-（廣州音）	礒	ngãi
-（廣州音）	艤	ngãi
+（廣州音）	礒	ngãy
+（廣州音）	艤	ngãy
 （台山音）	艤	ngải
 （南寧音）	艤	ngãy
-（廣州音）	蛾	ngãi
+（廣州音）	蛾	ngãy
 （廣州音）	蛾	ngò
 （廣州音）	蛾	ngẫu
 （台山音）	蛾	ngò
 （台山音）	蛾	ngù
 （欽州音）	蛾	ngò
 （南寧音）	蛾	ngò
-（廣州音）	螘	ngãi
+（廣州音）	螘	ngãy
 （台山音）	螘	ngải
 （南寧音）	螘	ngãy
-（廣州音）	蟻	ngãi
+（廣州音）	蟻	ngãy
 （台山音）	蟻	ngải
 （欽州音）	蟻	ngảy
 （欽州音）	蟻	y
 （南寧音）	蟻	ngãy
-（廣州音）	轙	ngãi
-（廣州音）	鈘	ngãi
-（廣州音）	頠	ngãi
+（廣州音）	轙	ngãy
+（廣州音）	鈘	ngãy
+（廣州音）	頠	ngãy
 （南寧音）	頠	ngãy
-（廣州音）	顗	ngãi
+（廣州音）	顗	ngãy
 （南寧音）	顗	ngãy
 （廣州音）	㙯	ngạy
 （廣州音）	㜒	ngạy
@@ -53167,15 +53167,15 @@
 （廣州音）	䰦	pảy
 （廣州音）	䡟	páy
 （廣州音）	睥	páy
-（廣州音）	睥	pãi
+（廣州音）	睥	pãy
 （廣州音）	睥	pỹ
 （台山音）	睥	pỹ
 （欽州音）	睥	pày
 （欽州音）	睥	pảy
 （南寧音）	睥	bị
 （南寧音）	睥	(又)pĩ
-（廣州音）	䁹	pãi
-（廣州音）	睤	pãi
+（廣州音）	䁹	pãy
+（廣州音）	睤	pãy
 （廣州音）	㡦	pân
 （廣州音）	䎙	pân
 （廣州音）	穦	pân
@@ -61000,10 +61000,10 @@
 （廣州音）	𧡰	thày
 （廣州音）	𪂿	thày
 （台山音）	𪂿	hài
-（廣州音）	㼵	thãi
-（廣州音）	䑯	thãi
+（廣州音）	㼵	thãy
+（廣州音）	䑯	thãy
 （台山音）	䑯	ại
-（廣州音）	𡠨	thãi
+（廣州音）	𡠨	thãy
 （廣州音）	𠱁	thấm
 （廣州音）	𧨾	thấm
 （欽州音）	𧨾	thấm
@@ -61804,7 +61804,7 @@
 （南寧音）	妥	(又)thỏ
 （南寧音）	妥	thõ
 （廣州音）	撱	thỏ
-（廣州音）	撱	vãi
+（廣州音）	撱	ũy/vỹ
 （廣州音）	橢	thõ
 （廣州音）	橢	thỏ
 （台山音）	橢	hõ
@@ -63300,13 +63300,13 @@
 （欽州音）	位	ùy
 （南寧音）	位	(白)ủy
 （南寧音）	位	ụy
-（廣州音）	卉	vãi
+（廣州音）	卉	ũy/vỹ
 （廣州音）	卉	ủy
 （台山音）	卉	phỉ
 （欽州音）	卉	ủy
 （南寧音）	卉	ủy
 （廣州音）	唯	ùy
-（廣州音）	唯	vãi
+（廣州音）	唯	ũy/vỹ
 （廣州音）	唯	ủy
 （台山音）	唯	vỳ
 （欽州音）	唯	ùy
@@ -63347,7 +63347,7 @@
 （廣州音）	芔	vý
 （廣州音）	芔	ủy
 （南寧音）	芔	ủy
-（廣州音）	蒍	vãi
+（廣州音）	蒍	ũy/vỹ
 （廣州音）	蒍	ủy
 （南寧音）	蒍	ủy
 （廣州音）	蔿	ủy
@@ -63434,7 +63434,7 @@
 （南寧音）	螱	úy
 （廣州音）	褽	vý
 （廣州音）	諱	vý
-（廣州音）	諱	vãi
+（廣州音）	諱	ũy/vỹ
 （台山音）	諱	phí
 （台山音）	諱	vỷ
 （欽州音）	諱	ùy
@@ -63482,7 +63482,7 @@
 （廣州音）	欈	chúi
 （廣州音）	欈	ùy
 （廣州音）	湋	ùy
-（廣州音）	湋	vãi
+（廣州音）	湋	ũy/vỹ
 （南寧音）	湋	ùy
 （廣州音）	潿	ùy
 （台山音）	潿	vỳ
@@ -63512,7 +63512,7 @@
 （廣州音）	琟	ùy
 （南寧音）	琟	ùy
 （廣州音）	蓶	ùy
-（廣州音）	蓶	vãi
+（廣州音）	蓶	ũy/vỹ
 （廣州音）	讉	ùy
 （廣州音）	違	ùy
 （台山音）	違	vỳ
@@ -63530,13 +63530,13 @@
 （廣州音）	醀	chúi
 （廣州音）	醀	ùy
 （廣州音）	鍏	ùy
-（廣州音）	鍏	vãi
+（廣州音）	鍏	ũy/vỹ
 （廣州音）	闈	ùy
 （台山音）	闈	vỳ
 （欽州音）	闈	ùy
 （南寧音）	闈	ùy
 （廣州音）	韋	ùy
-（廣州音）	韋	vãi
+（廣州音）	韋	ũy/vỹ
 （台山音）	韋	vỷ
 （欽州音）	韋	ùy
 （南寧音）	韋	ùy
@@ -63545,54 +63545,54 @@
 （南寧音）	鮠	ngày
 （廣州音）	𡺨	ùy
 （廣州音）	𤔡	ùy
-（廣州音）	㖐	vãi
-（廣州音）	㙔	vãi
-（廣州音）	㨊	vãi
-（廣州音）	㬙	vãi
-（廣州音）	䈧	vãi
-（廣州音）	䍷	vãi
-（廣州音）	䪘	vãi
-（廣州音）	䵋	vãi
-（廣州音）	偉	vãi
+（廣州音）	㖐	ũy/vỹ
+（廣州音）	㙔	ũy/vỹ
+（廣州音）	㨊	ũy/vỹ
+（廣州音）	㬙	ũy/vỹ
+（廣州音）	䈧	ũy/vỹ
+（廣州音）	䍷	ũy/vỹ
+（廣州音）	䪘	ũy/vỹ
+（廣州音）	䵋	ũy/vỹ
+（廣州音）	偉	ũy/vỹ
 （台山音）	偉	vỷ
 （欽州音）	偉	ủy
 （南寧音）	偉	ủy
-（廣州音）	儰	vãi
+（廣州音）	儰	ũy/vỹ
 （南寧音）	儰	ủy
-（廣州音）	徫	vãi
-（廣州音）	愇	vãi
-（廣州音）	暐	vãi
+（廣州音）	徫	ũy/vỹ
+（廣州音）	愇	ũy/vỹ
+（廣州音）	暐	ũy/vỹ
 （南寧音）	暐	ủy
-（廣州音）	濻	vãi
-（廣州音）	瀢	vãi
-（廣州音）	煒	vãi
+（廣州音）	濻	ũy/vỹ
+（廣州音）	瀢	ũy/vỹ
+（廣州音）	煒	ũy/vỹ
 （台山音）	煒	vỷ
 （欽州音）	煒	ủy
 （南寧音）	煒	ủy
-（廣州音）	瑋	vãi
+（廣州音）	瑋	ũy/vỹ
 （台山音）	瑋	vỷ
 （欽州音）	瑋	ủy
 （南寧音）	瑋	ủy
-（廣州音）	緯	vãi
+（廣州音）	緯	ũy/vỹ
 （廣州音）	緯	vỵ
 （台山音）	緯	vỷ
 （欽州音）	緯	ủy
 （南寧音）	緯	ủy
-（廣州音）	葦	vãi
+（廣州音）	葦	ũy/vỹ
 （台山音）	葦	vỷ
 （欽州音）	葦	ủy
 （南寧音）	葦	ùy
-（廣州音）	韑	vãi
-（廣州音）	韙	vãi
+（廣州音）	韑	ũy/vỹ
+（廣州音）	韙	ũy/vỹ
 （台山音）	韙	vỷ
 （欽州音）	韙	ủy
 （南寧音）	韙	ủy
-（廣州音）	韡	vãi
+（廣州音）	韡	ũy/vỹ
 （台山音）	韡	vỷ
 （南寧音）	韡	ủy
-（廣州音）	颹	vãi
-（廣州音）	𥯤	vãi
-（廣州音）	𨗨	vãi
+（廣州音）	颹	ũy/vỹ
+（廣州音）	𥯤	ũy/vỹ
+（廣州音）	𨗨	ũy/vỹ
 （廣州音）	㒞	vỵ
 （廣州音）	㤬	vỵ
 （廣州音）	㥜	vỵ
