--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -377,7 +377,7 @@
 （南寧音）	握	ăc
 （廣州音）	軛	ach
 （廣州音）	軛	ách
-（廣州音）	軛	ảc
+（廣州音）	軛	ảch
 （台山音）	軛	ẵc
 （欽州音）	軛	ăc
 （南寧音）	軛	ách
@@ -390,7 +390,7 @@
 （欽州音）	𧦠	ngăc
 （廣州音）	鈪	ngạch
 （廣州音）	鈪	ách
-（廣州音）	鈪	ảc
+（廣州音）	鈪	ảch
 （欽州音）	鈪	ngạch
 （南寧音）	鈪	ách
 （廣州音）	菡	hãm
@@ -65305,7 +65305,7 @@
 （南寧音）	豸	(又)chại
 （南寧音）	豸	chị
 （廣州音）	宅	chạch
-（廣州音）	宅	chảc
+（廣州音）	宅	chảch
 （台山音）	宅	chạc
 （欽州音）	宅	chạch
 （南寧音）	宅	chạch
