--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -89,8 +89,8 @@
 阨	ach
 阸	ach
 𧦠	ach
-軛	ảc	
-鈪	ảc	
+軛	ảch	
+鈪	ảch	
 軛	ách
 軶	ách
 鈪	ách
@@ -30978,7 +30978,7 @@
 眥	chại	
 砦	chại	
 豸	chại	
-宅	chảc	
+宅	chảch	
 㖽	chách
 㳻	chách
 㺓	chách
