--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -1,5 +1,8 @@
 #粵語國語字總合書寫建議體，集合粵語廣州音欽州音台山音南寧音同通用粵語音
-#大粵國音實錄
+#大粵國音實錄 Đại Oạt Quóc Yâm Sật Lục
+#使用指南：一個讀音可以同時存在多種正寫方式，譬如話uy 同 vy,呢兩種正寫喺手寫情況底下同粵語國語字發音系統入面並無分別。
+#ay同ê正寫嘅韻腹發音相同，呢兩種正寫嘅分別在於，漢字嘅詞源係漢越詞或者有明確音變規律嘅純越詞語用ê，其餘嘅非漢字詞、唔符合一般音韻變化規律嘅發音，同埋用嚟表音嘅表示韻腹發音而冇漢字意思嘅音節依然使用ay正寫
+#韻首字母k喺韻腹字母a u o â ă ư ô ơ前邊可以用字母c替代
 #version: 23/5/2025
 #author: cathaylab
 （廣州音）	邊	binh
