--- a/quocngutihamchauva.yaml
+++ b/quocngutihamchauva.yaml
@@ -50,7 +50,7 @@
 坳	áo
 拗	áo
 詏	áo
-哎	ay/ê
+哎	ay
 屭	áy/ế
 縊	áy/ế
 螠	áy/ế
@@ -2219,16 +2219,16 @@
 滘	káo/cáo
 校	káo/cáo
 攪	kào/cào
-雞	kay/cay/kê/cê
-膎	kay/cay/kê/cê
-鐖	kay/cay/kê/cê
-計	káy/cáy/kế/cế
-繼	káy/cáy/kế/cế
-繫	káy/cáy/kế/cế
-薊	káy/cáy/kế/cế
-髻	káy/cáy/kế/cế
-罽	káy/cáy/kế/cế
-偈	kày/cày/kề/cề
+雞	kay/cay/kê
+膎	kay/cay/kê
+鐖	kay/cay/kê
+計	káy/cáy/kế
+繼	káy/cáy/kế
+繫	káy/cáy/kế
+薊	káy/cáy/kế
+髻	káy/cáy/kế
+罽	káy/cáy/kế
+偈	kày/cày/kề
 硌	kặc/cặc
 今	kâm/câm
 金	kâm/câm
@@ -2955,7 +2955,7 @@
 效	hào
 傚	hào
 閪	hay/hê
-喺	hảy/hể
+喺	hảy
 兮	hày/hề
 奚	hày/hề
 蹊	hày/hề
@@ -5310,10 +5310,10 @@
 袤	mào
 貌	mào
 懋	mào
-咪	may/mê
+咪	may
 冞	may/mê
 劘	may/mê
-米	may/mê
+米	may
 美	mảy/mể
 渼	mảy/mể
 鎂	mảy/mể
@@ -5743,13 +5743,13 @@
 儗	nảy/nể
 膩	náy/nế
 擬	náy/nế
-呢	này/nề
-妮	này/nề
-尼	này/nề
-坭	này/nề
-泥	này/nề
-怩	này/nề
-鈮	này/nề
+呢	này
+妮	này
+尼	này
+坭	này
+泥	này
+怩	này
+鈮	này
 𢴚	năc
 𡥠	năc
 𰑳	nâm
@@ -8288,8 +8288,8 @@
 擠	chay/chê
 劑	chay/chê
 鯔	chay/chê
-仔	chảy/chể
-崽	chảy/chể
+仔	chảy
+崽	chảy
 濟	chảy/chể
 際	cháy/chế
 濟	cháy/chế
