--- a/quocngutihamchauva.yaml
+++ b/quocngutihamchauva.yaml
@@ -5743,13 +5743,13 @@
 儗	nảy/nể
 膩	náy/nế
 擬	náy/nế
-呢	này
-妮	này
-尼	này
-坭	này
-泥	này
-怩	này
-鈮	này
+呢	này/nề
+妮	này/nề
+尼	này/nề
+坭	này/nề
+泥	này/nề
+怩	này/nề
+鈮	này/nề
 𢴚	năc
 𡥠	năc
 𰑳	nâm
