--- a/quocyuchinamninhva.yaml
+++ b/quocyuchinamninhva.yaml
@@ -2709,17 +2709,17 @@
 罰	phạt
 閥	phạt
 𠲎	phạt
-撝	(文)phay/(文)phê
-揮	(文)phay/(文)phê
-暉	(文)phay/(文)phê
-琿	(文)phay/(文)phê
-翬	(文)phay/(文)phê
-褘	(文)phay/(文)phê
-輝	(文)phay/(文)phê
-隳	(文)phay/(文)phê
-麾	(文)phay/(文)phê
-噅	(文)phay/(文)phê
-煇	(文)phay/(文)phê
+撝	(文)phay
+揮	(文)phay
+暉	(文)phay
+琿	(文)phay
+翬	(文)phay
+褘	(文)phay
+輝	(文)phay
+隳	(文)phay
+麾	(文)phay
+噅	(文)phay
+煇	(文)phay
 䛍	pháy/phế
 廢	pháy/phế
 沸	pháy/phế
@@ -12753,9 +12753,9 @@
 躋	chay/chê
 齏	chay/chê
 隮	chay/chê
-仔	chảy
-囝	(訓)chảy
-崽	(白)chảy
+仔	chảy/chể
+囝	(訓)chảy/(訓)chể
+崽	(白)chảy/(白)chể
 濟	chảy/chể
 滓	(訓)chảy/(訓)chể
 䎺	cháy/chế
@@ -14152,14 +14152,14 @@
 仔密	chỉ mật
 仔孫	chủ sloan
 仔孫	chỉ sloan
-男仔	nàm chảy
-女仔	nữ chảy
-仔女	chảy nữ
-豬仔	chư chảy
-雞仔	kay chảy/kê chảy
-靚仔	lếnh chảy
-肥仔	phì chảy
-打工仔	đả kung chảy
+男仔	nàm chảy/nàm chể
+女仔	nữ chảy/nữ chể
+仔女	chảy nữ/chể nữ
+豬仔	chư chảy/chư chể
+雞仔	kay chảy/kê chảy/kê chể
+靚仔	lếnh chảy/lênh chể
+肥仔	phì chảy/phì chể
+打工仔	đả kung chảy/đả kung chể
 打仗	đả chướng
 勝仗	sính chướng
 敗仗	bại chướng
@@ -15581,7 +15581,7 @@
 撈世界	lô sáy kái/lô sế kái
 乾撈	kon lô
 乾撈麪	kon lô miện
-撈仔	lao chảy
+撈仔	lao chảy/lao chể
 撈佬	lao lổ
 撈起	leo hỉ
 撈起	lao hỉ
@@ -17896,7 +17896,7 @@
 計數	káy số/kế số
 估計	kổ káy/kổ kế
 計謀	káy mầu/kế mầu
-計仔	kảy chảy/kể chảy
+計仔	kảy chảy/kể chảy/kể chể
 諗計	nẩm kảy/nẩm kể
 恁計	nẩm kảy/nẩm kể
 冇計	mỗ kảy/mỗ kể
@@ -18940,8 +18940,8 @@
 老孃	lao nênh
 弟弟	đì đỉ
 細屎胐	sláy sỉ phât/slế sỉ phât
-細路仔	sláy lộ chảy/slế lộ chảy
-細蚊仔	sláy mân chảy/slế mân chảy
+細路仔	sláy lộ chảy/slế lộ chảy/slế lộ chể
+細蚊仔	sláy mân chảy/slế mân chảy/slế mân chể
 細佬	sláy lổ/slế lổ
 阿弟	á đỉ
 出去耍	xoat hứ sả
@@ -18988,7 +18988,7 @@
 流嘢	lầu yẽ
 靚嘢	lếnh yẽ
 論盡	lận chận
-銻仔	thay chảy
+銻仔	thay chảy/thay chể
 糾正	đẩu chính
 黃䘆	vòng hoản
 地龍	đị lùng
@@ -19014,14 +19014,14 @@
 老友	lỗ yẫu
 風唿	phung phet
 夠派	kấu pai
-油脂仔	yầu chi chảy
+油脂仔	yầu chi chảy/yầu chi chể
 油脂女	yầu chi nử
-柔姿仔	yầu chi chảy
+柔姿仔	yầu chi chảy/yầu chi chể
 柔姿女	yầu chi nử
 油脂裝	yầu chi chong
 柔姿裝	yầu chi chong
 三腳雞	slam kước kay/slam kước kê
-三馬仔	slam mã chảy
+三馬仔	slam mã chảy/slam mã chể
 油脂車	yầu chi xe
 油脂的	yầu chi đich
 柔姿車	yầu chi xe
