--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -15674,12 +15674,12 @@
 （廣州音）	䤻	đọ
 （廣州音）	䩔	đọ
 （廣州音）	䲊	đọ
-（廣州音）	墮	phay/phê
+（廣州音）	墮	phay
 （廣州音）	墮	đọ
 （台山音）	墮	ọ
 （欽州音）	墮	đò
 （南寧音）	墮	đọ
-（廣州音）	墯	phay/phê
+（廣州音）	墯	phay
 （廣州音）	墯	đọ
 （廣州音）	媠	thõ
 （廣州音）	媠	đọ
@@ -17173,24 +17173,24 @@
 （南寧音）	髮	phát
 （廣州音）	𠵽	phát
 （廣州音）	𧬋	phát
-（廣州音）	㩣	phay/phê
-（廣州音）	㫎	phay/phê
-（廣州音）	㹆	phay/phê
-（廣州音）	䘗	phay/phê
-（廣州音）	䜐	phay/phê
-（廣州音）	噅	phay/phê
+（廣州音）	㩣	phay
+（廣州音）	㫎	phay
+（廣州音）	㹆	phay
+（廣州音）	䘗	phay
+（廣州音）	䜐	phay
+（廣州音）	噅	phay
 （南寧音）	噅	(文)phay/(文)phê
 （南寧音）	噅	(白)uy
-（廣州音）	噕	phay/phê
-（廣州音）	婎	phay/phê
-（廣州音）	媈	phay/phê
-（廣州音）	幑	phay/phê
-（廣州音）	徽	phay/phê
+（廣州音）	噕	phay
+（廣州音）	婎	phay
+（廣州音）	媈	phay
+（廣州音）	幑	phay
+（廣州音）	徽	phay
 （台山音）	徽	phí
 （欽州音）	徽	phi
 （南寧音）	徽	phôi
 （廣州音）	戲	hý
-（廣州音）	戲	phay/phê
+（廣州音）	戲	phay
 （廣州音）	戲	phu
 （台山音）	戲	hý
 （台山音）	戲	phú
@@ -17198,28 +17198,28 @@
 （南寧音）	戲	phô
 （南寧音）	戲	(白)hi
 （南寧音）	戲	hí
-（廣州音）	揮	phay/phê
+（廣州音）	揮	phay
 （台山音）	揮	phí
 （欽州音）	揮	phi
 （南寧音）	揮	(文)phay/(文)phê
 （南寧音）	揮	(白)uy
-（廣州音）	撝	phay/phê
+（廣州音）	撝	phay
 （台山音）	撝	phí
 （欽州音）	撝	phui
 （南寧音）	撝	(文)phay/(文)phê
 （南寧音）	撝	(白)uy
-（廣州音）	暉	phay/phê
+（廣州音）	暉	phay
 （台山音）	暉	phí
 （欽州音）	暉	phi
 （南寧音）	暉	(文)phay/(文)phê
 （南寧音）	暉	(白)uy
-（廣州音）	椲	phay/phê
+（廣州音）	椲	phay
 （廣州音）	椲	ũy/vỹ
-（廣州音）	楎	phay/phê
+（廣州音）	楎	phay
 （廣州音）	楎	vần
-（廣州音）	瀈	phay/phê
-（廣州音）	灳	phay/phê
-（廣州音）	煇	phay/phê
+（廣州音）	瀈	phay
+（廣州音）	灳	phay
+（廣州音）	煇	phay
 （廣州音）	煇	vy
 （廣州音）	煇	vận
 （台山音）	煇	phún
@@ -17227,7 +17227,7 @@
 （台山音）	煇	vùn
 （南寧音）	煇	(文)phay/(文)phê
 （南寧音）	煇	(白)uy
-（廣州音）	琿	phay/phê
+（廣州音）	琿	phay
 （廣州音）	琿	vần
 （台山音）	琿	phí
 （台山音）	琿	vụn
@@ -17236,52 +17236,52 @@
 （南寧音）	琿	(白)uy
 （南寧音）	琿	vần
 （通用版）	睢	slui
-（廣州音）	睢	phay/phê
+（廣州音）	睢	phay
 （廣州音）	睢	sui
 （台山音）	睢	chúi
 （台山音）	睢	slúi
 （欽州音）	睢	phui
 （欽州音）	睢	slui
 （南寧音）	睢	slôi
-（廣州音）	禈	phay/phê
-（廣州音）	翬	phay/phê
+（廣州音）	禈	phay
+（廣州音）	翬	phay
 （台山音）	翬	phí
 （南寧音）	翬	(文)phay/(文)phê
 （南寧音）	翬	(白)uy
-（廣州音）	蘳	phay/phê
-（廣州音）	褘	phay/phê
+（廣州音）	蘳	phay
+（廣州音）	褘	phay
 （廣州音）	褘	ùy
 （台山音）	褘	phí
 （欽州音）	褘	phi
 （南寧音）	褘	(文)phay/(文)phê
 （南寧音）	褘	(白)uy
 （廣州音）	觿	khùy
-（廣州音）	觿	phay/phê
+（廣州音）	觿	phay
 （南寧音）	觿	khùy
-（廣州音）	輝	phay/phê
+（廣州音）	輝	phay
 （台山音）	輝	phí
 （欽州音）	輝	phi
 （南寧音）	輝	(文)phay/(文)phê
 （南寧音）	輝	(白)uy
-（廣州音）	隓	phay/phê
+（廣州音）	隓	phay
 （廣州音）	隓	thõ
-（廣州音）	隳	phay/phê
+（廣州音）	隳	phay
 （廣州音）	隳	phui
 （台山音）	隳	phỉ
 （欽州音）	隳	phui
 （南寧音）	隳	(文)phay/(文)phê
 （南寧音）	隳	(白)uy
-（廣州音）	鰴	phay/phê
-（廣州音）	麾	phay/phê
+（廣州音）	鰴	phay
+（廣州音）	麾	phay
 （台山音）	麾	phí
 （欽州音）	麾	phui
 （南寧音）	麾	(文)phay/(文)phê
 （南寧音）	麾	(白)uy
-（廣州音）	𡽪	phay/phê
-（廣州音）	𤪖	phay/phê
-（廣州音）	𦆮	phay/phê
-（廣州音）	𦑩	phay/phê
-（廣州音）	𧃸	phay/phê
+（廣州音）	𡽪	phay
+（廣州音）	𤪖	phay
+（廣州音）	𦆮	phay
+（廣州音）	𦑩	phay
+（廣州音）	𧃸	phay
 （廣州音）	疿	pháy/phế
 （廣州音）	疿	phạy/phệ
 （廣州音）	疿	phảy/phể
@@ -50172,7 +50172,7 @@
 （欽州音）	喃	nàm
 （南寧音）	喃	(白)nam
 （南寧音）	喃	(文)nàm
-（通用版）	囝	tảy
+（通用版）	囝	tảy/tể
 （廣州音）	囝	chảy
 （廣州音）	囝	nàm
 （台山音）	囝	nàm
@@ -66113,7 +66113,7 @@
 （通用版）	䍤	tảy/tể
 （廣州音）	䍤	chảy/chể
 （台山音）	䍤	tãi
-（通用版）	仔	tảy
+（通用版）	仔	tảy/tể
 （通用版）	仔	tỉ
 （廣州音）	仔	chi
 （廣州音）	仔	chảy/chể
@@ -66125,7 +66125,7 @@
 （南寧音）	仔	chảy/chể
 （南寧音）	仔	chỉ
 （南寧音）	仔	(老派)chủ
-（通用版）	崽	tảy
+（通用版）	崽	tảy/tể
 （通用版）	崽	tỏi
 （廣州音）	崽	chảy/chể
 （廣州音）	崽	chỏi
